Creating new RolesAllowedDynamicFeature which is annotation-driven.